# krill

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  krill.cabal  pubspec.yaml
app/: Body.hs  Header.hs  Main.hs
app/Krill/: Body.hs  Cli.hs  Footer.hs  Header.hs  Help.hs  Types.hs  Utils.hs
linux/: CMakeLists.txt  my_application.cc
test/: widget_test.dart
web/: index.html  manifest.json
