cabal-version:      2.4
name:               krill
version:            0.1.0.0
synopsis:           TUI client for lobste.rs
homepage:           https://github.com/pombadev/krill
bug-reports:        https://github.com/pombadev/krill/issues
license:            MIT
license-file:       LICENSE
author:             Pomba Magar
maintainer:         pombamagar@gmail.com
copyright:          (C) Pomba Magar 2022-2022
build-type:         Simple
category:           TUI
extra-source-files:
  CHANGELOG.md
  README

executable krill
  main-is:            Main.hs
  other-modules:
    Krill.Body
    Krill.Footer
    Krill.Header
    Krill.Types
    Krill.Utils

  default-extensions:
    DuplicateRecordFields
    OverloadedStrings
    OverloadedRecordDot

  build-depends:
    , base        ^>=4.16.3.0
    , brick
    , config-ini
    , request
    , text
    , vty

  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N -Wno-unrecognised-pragmas
